force-app/main/default/objects/User/fields/Annual_Sales_Team_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Team_Quota__c</fullName>
    <description>Total sales quota per team</description>
    <label>Annual Sales Team Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>