force-app/main/default/objects/User/fields/Apex_Processing__c.field-meta.xml
<CustomField>
    <fullName>Apex_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag set to indicate the user is being processed in an apex context and validation rules can be bypassed</description>
    <inlineHelpText>Flag set to indicate the user is being processed in an apex context and validation rules can be bypassed</inlineHelpText>
    <label>Apex Processing</label>
    <type>Checkbox</type>
</CustomField>