force-app/main/default/objects/User/fields/Apr_Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Apr_Sales_Plan__c</fullName>
    <label>Apr Sales Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>