force-app/main/default/objects/User/fields/Aug_Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Aug_Sales_Plan__c</fullName>
    <label>Aug Sales Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>