force-app/main/default/objects/User/fields/Competency_Group__c.field-meta.xml
<CustomField>
    <fullName>Competency_Group__c</fullName>
    <description>User&apos;s competency group populated by the associated contact</description>
    <inlineHelpText>User&apos;s competency group</inlineHelpText>
    <label>Competency Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>