force-app/main/default/objects/User/fields/Current_Employee__c.field-meta.xml
<CustomField>
    <fullName>Current_Employee__c</fullName>
    <formula>AND(Start_Date__c &gt; DATE(2000,12,20),IsActive)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Employee</label>
    <type>Checkbox</type>
</CustomField>