force-app/main/default/objects/User/fields/Dec_Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Dec_Sales_Plan__c</fullName>
    <label>Dec Sales Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>