force-app/main/default/objects/User/fields/Facebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_ID__c</fullName>
    <label>Facebook ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>