force-app/main/default/objects/User/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to mark this as a featured user.</inlineHelpText>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>