force-app/main/default/objects/User/fields/Google_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_ID__c</fullName>
    <label>Google ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>