force-app/main/default/objects/User/fields/Hide_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Hide_Terms_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Community users to determine whether they need to see the Terms &amp; Conditions pop up.</description>
    <label>Hide Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>