force-app/main/default/objects/User/fields/Hive_Terms__c.field-meta.xml
<CustomField>
    <fullName>Hive_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this user has accepted the Hive terms and conditions</description>
    <inlineHelpText>Indicates whether this user has accepted the Hive terms and conditions</inlineHelpText>
    <label>Hive Terms Accepted</label>
    <type>Checkbox</type>
</CustomField>