force-app/main/default/objects/User/fields/Jul_Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Jul_Sales_Plan__c</fullName>
    <label>Jul Sales Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>