force-app/main/default/objects/User/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <inlineHelpText>Add your LinkedIn profile link</inlineHelpText>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>