force-app/main/default/objects/User/fields/Nov_Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Nov_Sales_Plan__c</fullName>
    <label>Nov Sales_Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>