force-app/main/default/objects/User/fields/Preferred_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Method__c</fullName>
    <inlineHelpText>How do you prefer to be communicated to?</inlineHelpText>
    <label>Preferred Communication Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Chat (Google Hangouts)</fullName>
            </value>
            <value>
                <fullName>Chat (Slack)</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>@ mentions on Chatter</fullName>
            </value>
            <value>
                <fullName>Walk into my office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>