force-app/main/default/objects/User/fields/Q3_Sales_Plan_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Q3_Sales_Plan_Breakdown__c</fullName>
    <formula>IF( LastName = &quot;Brown&quot;,(1250000.00),
IF( LastName = &quot;Ebrahim&quot;,(1250000.00),
IF( LastName = &quot;Walsh&quot;,(1250000.00),
IF( LastName = &quot;Hogervorst&quot;,(975000.00),
IF (LastName = &quot;Capute&quot;,(937500.00),
IF (LastName = &quot;MacManus&quot;,(937500.00),
IF (LastName = &quot;McSkimming&quot;,(937500.00),
IF (LastName = &quot;Friedhoff&quot;,(937500.00),
IF (LastName = &quot;Masonius&quot;,(156250.00),
IF (LastName = &quot;Fortino&quot;,(937500.00),
IF( LastName = &quot;Sharp&quot;,(781250.00),
IF( LastName = &quot;Gendelman&quot;,(937500.00),
0))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Sales Plan Breakdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>