force-app/main/default/objects/User/fields/Remote_or_In_Office__c.field-meta.xml
<CustomField>
    <fullName>Remote_or_In_Office__c</fullName>
    <inlineHelpText>Do you work remote, or in the office?</inlineHelpText>
    <label>Remote or In Office?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>In Milwaukee Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>