force-app/main/default/objects/User/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>User&apos;s start date populated by the associated contact</description>
    <inlineHelpText>User&apos;s start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>