force-app/main/default/objects/User/fields/T_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>T_Shirt_Size__c</fullName>
    <description>Swag size (unisex shirts)</description>
    <inlineHelpText>Add your T-Shirt size for swag orders (typically unisex)</inlineHelpText>
    <label>T-Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
            <value>
                <fullName>XXXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>