force-app/main/default/objects/User/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <description>The team name assigned to the user</description>
    <label>Team Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bellatrix</fullName>
            </value>
            <value>
                <fullName>Fomalhaut</fullName>
            </value>
            <value>
                <fullName>Orion</fullName>
            </value>
            <value>
                <fullName>Regulus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>