force-app/main/default/objects/User/fields/Username_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Username_Prefix__c</fullName>
    <formula>LEFT(Username, FIND(&apos;@7summitscommunity.com&apos;, Username) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Username Prefix</label>
    <type>Text</type>
</CustomField>