force-app/main/default/objects/User/fields/Website_Blog__c.field-meta.xml
<CustomField>
    <fullName>Website_Blog__c</fullName>
    <inlineHelpText>Share your website or blog link.</inlineHelpText>
    <label>Website / Blog</label>
    <type>TextArea</type>
</CustomField>