force-app/main/default/objects/User/fields/Works_From__c.field-meta.xml
<CustomField>
    <fullName>Works_From__c</fullName>
    <inlineHelpText>What city &amp; State do you work from?</inlineHelpText>
    <label>Works From</label>
    <type>TextArea</type>
</CustomField>