force-app/main/default/objects/User/fields/X2018_Bookings__c.field-meta.xml
<CustomField>
    <fullName>X2018_Bookings__c</fullName>
    <formula>IF( LastName = &quot;Brown&quot;,(2180927.00), 
IF( LastName = &quot;Ebrahim&quot;,(4985418.00), 
IF( LastName = &quot;Walsh&quot;,(10346387.00), 
IF( LastName = &quot;Hogervorst&quot;,(2731842.00), 
IF (LastName = &quot;Capute&quot;,(1130445.00), 
IF (LastName = &quot;MacManus&quot;,(1721197.00), 
IF (LastName = &quot;McSkimming&quot;,(1588405.00), 
IF (LastName = &quot;Friedhoff&quot;,(131650.00), 
IF (LastName = &quot;Cugno&quot;,(207870.00), 
IF (LastName = &quot;Fortino&quot;,(0.00), 
0))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>