force-app/main/default/objects/User/fields/X7S_Agreed_to_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>X7S_Agreed_to_Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agreed to Terms and Conditions in 7S Onboarding component</description>
    <inlineHelpText>Agreed to Terms and Conditions in 7S Onboarding component</inlineHelpText>
    <label>7S Agreed to Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>