force-app/main/default/objects/User/fields/X7S_Completed_Additional_User_Data__c.field-meta.xml
<CustomField>
    <fullName>X7S_Completed_Additional_User_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>7S Completed Additional User Data</label>
    <type>Checkbox</type>
</CustomField>