force-app/main/default/objects/User/fields/X7S_Completed_Groups_Slide__c.field-meta.xml
<CustomField>
    <fullName>X7S_Completed_Groups_Slide__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>On-boarding step 5</inlineHelpText>
    <label>7S Completed Groups Slide</label>
    <type>Checkbox</type>
</CustomField>