force-app/main/default/objects/User/fields/X7S_Completed_Notification_Slide__c.field-meta.xml
<CustomField>
    <fullName>X7S_Completed_Notification_Slide__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>On-boarding step 3</inlineHelpText>
    <label>7S Completed Notification Slide</label>
    <type>Checkbox</type>
</CustomField>