force-app/main/default/objects/User/fields/X7S_Completed_Welcome_Slide__c.field-meta.xml
<CustomField>
    <fullName>X7S_Completed_Welcome_Slide__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Onboard Step 1</inlineHelpText>
    <label>7S Completed Welcome Slide</label>
    <type>Checkbox</type>
</CustomField>