force-app/main/default/objects/User/fields/X7S_Hide_Modal_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>X7S_Hide_Modal_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User preference for modal display of Onboarding.   If checked, modal form will not display even.</description>
    <inlineHelpText>Field will be set by user during onboarding on the “Bye for Now” page.</inlineHelpText>
    <label>7S Hide Modal Onboarding</label>
    <type>Checkbox</type>
</CustomField>