force-app/main/default/objects/User/fields/X7S_Last_Topic_Slide_Completed__c.field-meta.xml
<CustomField>
    <fullName>X7S_Last_Topic_Slide_Completed__c</fullName>
    <label>7S Last Topic Slide Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>