force-app/main/default/objects/User/fields/X7S_Onboarding_Complete__c.field-meta.xml
<CustomField>
    <fullName>X7S_Onboarding_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>On-boarding complete</inlineHelpText>
    <label>7S Onboarding Complete</label>
    <type>Checkbox</type>
</CustomField>