force-app/main/default/objects/User/validationRules/Email_Update_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Update_Validation</fullName>
    <active>false</active>
    <description>Validation that keeps an unauthorized user&apos;s from updating the user email</description>
    <errorConditionFormula>AND(ISCHANGED(Email),NOT(Apex_Processing__c))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>This field is controlled by the contact record. Please update this field on the contact record.</errorMessage>
</ValidationRule>