force-app/main/default/objects/User/validationRules/First_Name_Update_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Update_Validation</fullName>
    <active>true</active>
    <description>Validation that keeps an unauthorized user&apos;s from updating the user email</description>
    <errorConditionFormula>AND(ISCHANGED(FirstName),NOT(Apex_Processing__c), NOT( $Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>This field is controlled by the contact record. Please update this field on the contact record.</errorMessage>
</ValidationRule>