force-app/main/default/objects/User/validationRules/Last_Name_Update_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_Update_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(LastName), NOT(Apex_Processing__c), NOT( $Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>This field is controlled by the contact record. Please update this field on the contact record.</errorMessage>
</ValidationRule>