force-app/main/default/objects/User/listViews/ActiveUserswithAgency.listView-meta.xml
<ListView>
    <fullName>ActiveUserswithAgency</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>agency</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>agency</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>notContain</operation>
        <value>guest</value>
    </filters>
    <label>Active Users with Agency in Email or UN</label>
    <language>en_US</language>
</ListView>