force-app/main/default/objects/User/listViews/X7Summits_Employees.listView-meta.xml
<ListView>
    <fullName>X7Summits_Employees</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>@7summitsinc.com</value>
    </filters>
    <label>7Summits Employees</label>
    <language>en_US</language>
</ListView>